# crypto-signals-backend

./: .gitignore  .replit  app.py  kucoin_service.py  pyproject.toml  replit.md  requirements.txt  server.py  signals.py  strategy.py
api/: index.py
backend/: .env  .env.example  kucoin_service.py  main.py  routes.py  signals.py  signals_serverless.py
frontend/: app.js  index.html  styles.css
