[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.116.2",
    "kucoin-python>=1.0.26",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.4",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
